--- a/Instructions.html
+++ b/Instructions.html
@@ -48,18 +48,28 @@
   	 <h2>Plane</h2>
   	 <p>One of the best ways to get around the world!</p>
 	 <img src="Instructions_page_images/PlaneBlackBackground.jpg" width = "160" height = "160">
+	<audio controls style="width: 200px;">
+  	<source src="Airplane+4.mp3" type="audio/mpeg">
+	Your browser does not support the audio element.
+	</audio>
   	</div>
 	<div class="icons" style="background-color:#ccc;">
+
   	  <h2>Train</h2>
   	  <p>Thought of as the most romantic way to travel</p>
 	<img src="Instructions_page_images/TrainBlackBackground.jpg" width = "160" height = "160">
+	<audio controls style="width: 200px;">
+  	<source src="Inside-train-sound-effect-loop.mp3" type="audio/mpeg">
+	Your browser does not support the audio element.
+	</audio>
   	</div>
+
   	<div class="icons" style="background-color:#aaa;">
    	 <h2>Bus</h2>
    	 <p>The best way to see the off the beat sights</p>
 	 <img src="Instructions_page_images/BusBlackBackground.jpg" width = "160" height = "160">
-		<audio controls autoplay muted>
-  		<source src="airplane-fly-by-01a" type="audio/mpeg">
+		<audio controls style="width: 200px;">
+  		<source src="Bus-sound-effect.mp3" type="audio/mpeg">
 		Your browser does not support the audio element.
 		</audio>
 
@@ -70,7 +80,10 @@
 
   <div class="Column_quiz" style="background-color:#aaa;">
     <h2>Traveling</h2>
-    <p>Since the start of the Covid-19 pandemic, not as many people have been able to escape the UK or where they live to go and explore the world. There are so many fantastic locations to go and explore and if Covid has taught us anything, it is that we must enjoy our freedoms. 	Therefore it is the idea behind this quiz, to ask a few simple questions to provide new inspirational ideas and places for people to go and explore. </p>
+    <p>Since the start of the Covid-19 pandemic, not as many people have been able to escape the UK or where they live to go and explore the world. 
+<br></br>
+There are so many fantastic locations to go and explore and if Covid has taught us anything, it is that we must enjoy our freedoms. 	Therefore it is the idea behind this quiz, to ask a few simple questions to provide new inspirational ideas and places for people to go and explore. </p>
+<br></br>
 <img src="Instructions_page_images/Active_beach_break2.jpg" width = "160" height = "160">
 <img src="Instructions_page_images/Relaxing_Beach_Holidays4.jpg" width = "160" height = "160">
 <img src="Instructions_page_images/monterrey.jpg" width = "160" height = "160">
