--- a/Homepage.html
+++ b/Homepage.html
@@ -8,7 +8,7 @@
 <center>
 <body>
 <div class="topnav">
-	<a href="homepage.html">Home</a>
+	<a href="Homepage.html">Home</a>
 	<a href="Instructions.html">Instructions</a>
 	<a href="start_quiz.html">Start Quiz</a>
 </body>
