--- a/North&South_America_active_beach_holiday_suggestion.html
+++ b/North&South_America_active_beach_holiday_suggestion.html
@@ -10,7 +10,7 @@
 
 <body>
 <div class="topnav">
-	<a href="homepage.html">Home</a>
+	<a href="Homepage.html">Home</a>
 	<a href="Instructions.html">Instructions</a>
 	<a href="North_&_South_America_type_of_beach_break.html">Go Back A Question</a>
 </body>
