--- a/Instructions.html
+++ b/Instructions.html
@@ -31,7 +31,7 @@
 
 <div class="header"
 	<div class="header2" style="background-color:#ccc;">
-	<h1>What to do.....</h1>  
+	<h1>What to do...</h1>  
 
 
 <div class="row">
