--- a/Homepage.html
+++ b/Homepage.html
@@ -77,18 +77,18 @@
 
 
 <div class="icons">
-	<img src="home_page_images/money.jpg" width = "160" height = "160">
+	<img src="home_page_images/Money.jpg" width = "160" height = "160">
 	<img src="home_page_images/passport.jpg" width = "160" height = "160">
-	<img src="home_page_images/location.jpg" width = "160" height = "160">
+	<img src="home_page_images/Location.jpg" width = "160" height = "160">
 	<img src="home_page_images/lock.jpg" width = "160" height = "160">
-	<img src="home_page_images/documents.jpg" width = "160" height = "160">
-	<img src="home_page_images/trust.jpg" width = "160" height = "160">
-	<img src="home_page_images/alcohol.jpg" width = "160" height = "160">
-	<img src="home_page_images/valuables.jpg" width = "160" height = "160">
-	<img src="home_page_images/key.jpg" width = "160" height = "160">
-	<img src="home_page_images/map.jpg" width = "160" height = "160">
-	<img src="home_page_images/beer.jpg" width = "160" height = "160">
-	<img src="home_page_images/safety.jpg" width = "160" height = "160">
+	<img src="home_page_images/Documents.jpg" width = "160" height = "160">
+	<img src="home_page_images/Trust.jpg" width = "160" height = "160">
+	<img src="home_page_images/Alcohol.jpg" width = "160" height = "160">
+	<img src="home_page_images/Valuables.jpg" width = "160" height = "160">
+	<img src="home_page_images/Key.jpg" width = "160" height = "160">
+	<img src="home_page_images/Map.jpg" width = "160" height = "160">
+	<img src="home_page_images/Beer.jpg" width = "160" height = "160">
+	<img src="home_page_images/Safety.jpg" width = "160" height = "160">
 	<img src="home_page_images/id.jpg" width = "160" height = "160">
 	<img src="home_page_images/cash.jpg" width = "160" height = "160">
 	<img src="home_page_images/chat.jpg" width = "160" height = "160">
