--- a/middle_east&asia_type_of_city_break.html
+++ b/middle_east&asia_type_of_city_break.html
@@ -59,7 +59,7 @@
 <div class="icons">
 	<img src="city_breaks_continents_images/Middle_East&Asia/aukland.jpg" width = "160" height = "160">
 	<img src="city_breaks_continents_images/Middle_East&Asia/bahrain.jpg" width = "160" height = "160">
-	<img src="city_breaks_continents_images/Middle_East&Asia/doha.jpg" width = "160" height = "160">
+	<img src="city_breaks_continents_images/Middle_East&Asia/doha.JPG" width = "160" height = "160">
 	<img src="city_breaks_continents_images/Middle_East&Asia/ho_chi_minh.jpg" width = "160" height = "160">
 	<img src="city_breaks_continents_images/Middle_East&Asia/seoul.jpg" width = "160" height = "160">
 	<img src="city_breaks_continents_images/Middle_East&Asia/tokyo.jpg" width = "160" height = "160">
