--- a/middle_east&asia_type_of_city_break.html
+++ b/middle_east&asia_type_of_city_break.html
@@ -65,7 +65,7 @@
 	<img src="city_breaks_continents_images/Middle_East&Asia/tokyo.jpg" width = "160" height = "160">
 	<img src="city_breaks_continents_images/Middle_East&Asia/perth.jpg" width = "160" height = "160">
 	<img src="city_breaks_continents_images/Middle_East&Asia/mumbai.jpg" width = "160" height = "160">
-	<img src="city_breaks_continents_images/Middle_East&Asia/doha.jpg" width = "160" height = "160">
+	<img src="city_breaks_continents_images/Middle_East&Asia/singapore.jpg" width = "160" height = "160">
 	<img src="city_breaks_continents_images/Middle_East&Asia/tehran.jpg" width = "160" height = "160">
 	<img src="city_breaks_continents_images/Middle_East&Asia/kabul.jpg" width = "160" height = "160">
 	<img src="city_breaks_continents_images/Middle_East&Asia/kazakhstan.jpg" width = "160" height = "160">
