--- a/active_beach_holiday_middle_east_&_asia.html
+++ b/active_beach_holiday_middle_east_&_asia.html
@@ -83,8 +83,8 @@ The island's most stunning beach is cliffside Cat Co 3, which offers open views 
 <br> </br>
 </p>
 	<div class="icons">
-	<img src="Middle_East_&_Asia_suggestion_images/Cát_Bà_Island_Vietnam1.jpg" width = "160" height = "160">
-	<img src="Middle_East_&_Asia_suggestion_images/Cát_Bà_Island_Vietnam2.jpg" width = "160" height = "160">
+	<img src="Middle_East_&_Asia_suggestion_images/Cát_Bà_Island_Vietnam1.jpg" width = "160" height = "160">
+	<img src="Middle_East_&_Asia_suggestion_images/Cát_Bà_Island_Vietnam2.jpg" width = "160" height = "160">
 	<img src="Middle_East_&_Asia_suggestion_images/Cát_Bà_Island_Vietnam3.jpg" width = "160" height = "160">
 	<img src="Middle_East_&_Asia_suggestion_images/Cát_Bà_Island_Vietnam4.jpg" width = "160" height = "160">
 	<img src="Middle_East_&_Asia_suggestion_images/Cát_Bà_Island_Vietnam5.jpg" width = "160" height = "160">
