--- a/Homepage.html
+++ b/Homepage.html
@@ -35,7 +35,7 @@
 <div class="row">
   <div class="Column_traveling" style="background-color:#aaa;">
     <h2>Traveling</h2>
-    <p>Since that end of 2019, we have all been locked up at home and unable to travel however the world is now open and we should all start traveling again. The world is full of unique and wonderful places, ready to be explored. I hope you find the information on this website useful in preparations for your travels. By following the quiz we hope you will find some unique travel destinations you may not have considered before.</p>
+    <p>Since the end of 2019, we have all been locked up at home and unable to travel however the world is now open and we should all start traveling again. The world is full of unique and wonderful places, ready to be explored. I hope you find the information on this website useful in preparations for your travels. By following the quiz we hope you will find some unique travel destinations you may not have considered before.</p>
 <img src="home_page_images/the_world.jpg" width = "160" height = "160">
   </div>
 
